--- a/app/src/main/res/layout/activity_farmer_dashboard.xml
+++ b/app/src/main/res/layout/activity_farmer_dashboard.xml
@@ -2,20 +2,135 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <include
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="41dp"
+                android:layout_height="41dp"
+                android:layout_margin="2.5dp"
+                android:elevation="3dp"
+                app:cardCornerRadius="42dp">
+
+                <ImageView
+                    android:contentDescription="@string/farmer_profile_picture"
+                    android:src="@drawable/baseline_person_24"
+                    android:id="@+id/dash_farmer_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.cardview.widget.CardView>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/dash_farmer_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/farmer_name"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+                <!--  <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Ashish Humbre"
+                        android:textColorHighlight="#279D5B"
+                        android:textSize="12sp"
+                        android:textStyle="bold" />
+                    -->
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/farmer_tabs_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabTextColor="@color/white"
+        app:tabBackground="@drawable/back_selected"
+        app:tabMode="auto"
+        app:tabContentStart="30dp"
+        app:tabPaddingTop="0dp"
+        app:tabPaddingBottom="0dp"
+        app:tabPaddingEnd="20dp"
+        app:tabPaddingStart="20dp"
+        app:tabMinWidth="100dp"
+        app:tabTextAppearance="@style/TabTextStyle"
+        app:tabIndicatorColor="@android:color/transparent" >
+        <com.google.android.material.tabs.TabItem
+            android:text="Dashboard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <com.google.android.material.tabs.TabItem
+            android:text="Posts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <com.google.android.material.tabs.TabItem
+            android:text="All Plants"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <com.google.android.material.tabs.TabItem
+            android:text="My Land"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <com.google.android.material.tabs.TabItem
+            android:text="My Plants"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+
+    </com.google.android.material.tabs.TabLayout>
+
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/farmer_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="110dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_marginBottom="45dp"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <!--<include
         layout="@layout/include_farmer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toTopOf="@+id/tabs_layout_nav"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />-->
 
     <LinearLayout
         android:id="@+id/tabs_layout_nav"
@@ -31,14 +146,13 @@
         <ImageButton
             android:id="@+id/farmer_home_tab"
             android:layout_width="40dp"
-
             android:layout_height="40dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_baseline_home_24" />
 
         <ImageButton
-            android:id="@+id/farmer_conferance_tab"
+            android:id="@+id/farmer_conference_tab"
             android:layout_width="40dp"
 
             android:layout_height="40dp"
@@ -63,7 +177,7 @@
             android:src="@drawable/ic_baseline_newspaper_24" />
 
         <ImageButton
-            android:id="@+id/farmernotificationicon"
+            android:id="@+id/farmer_notification_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="0dp"
