--- a/app/src/main/res/layout/fragment_explore_plants.xml
+++ b/app/src/main/res/layout/fragment_explore_plants.xml
@@ -12,7 +12,7 @@
         android:paddingHorizontal="25dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Select Plants from\nBelow"
+        android:text="Select Plants from Below"
         android:textSize="28sp"
         android:textStyle="bold"/>
 
@@ -20,7 +20,7 @@
    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
-       android:layout_marginTop="90dp"
+       android:layout_marginTop="70dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
@@ -46,14 +46,51 @@
    </androidx.cardview.widget.CardView>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="142dp"
+        >
+
+        <CheckBox
+            android:checked="true"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="All"
+            android:id="@+id/farmer_plant_fragment_all_checkbox"/>
+        <CheckBox
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Fruits"
+            android:id="@+id/farmer_plant_fragment_fruits_checkbox"/>
+        <CheckBox
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vegetable"
+            android:id="@+id/farmer_plant_fragment_vegetable_checkbox"/>
+        <CheckBox
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Meditional"
+            android:id="@+id/farmer_plant_fragment_meditional_checkbox"/>
+
+    </LinearLayout>
+
+
     <androidx.recyclerview.widget.RecyclerView
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="15dp"
-        android:layout_marginTop="150dp"
         android:id="@+id/farmer_explore_plant_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="match_parent"
+        android:layout_marginTop="200dp"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp" />
 
 
 </FrameLayout>
