--- a/app/src/main/res/layout/view_plants.xml
+++ b/app/src/main/res/layout/view_plants.xml
@@ -4,10 +4,12 @@
     android:layout_width="wrap_content"
     app:cardCornerRadius="7dp"
     android:layout_margin="10dp"
+    android:background="@color/seed"
     android:layout_height="wrap_content">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="#D2FABE"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:minWidth="220dp"
@@ -31,40 +33,45 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop" />
         <ImageView
-            android:minHeight="150dp"
+            android:layout_marginBottom="50dp"
+            android:minHeight="180dp"
             android:padding="15dp"
             android:id="@+id/farmer_plant_img"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:src="@drawable/farmer_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
 
-        <TextView
-            android:id="@+id/farmer_plant_name_text"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="22dp"
-            android:text="Plant name"
-            android:textStyle="bold"
-            android:layout_marginLeft="15dp"
-            app:layout_constraintBottom_toTopOf="@+id/farmer_plant_lifespan_text"
+            android:orientation="vertical"
+            android:background="#4CAF50"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.221"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/farmer_plant_img">
 
-        <TextView
-            android:id="@+id/farmer_plant_lifespan_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="15dp"
-            android:text="lifecycle"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:layout_marginTop="8dp"
+                android:id="@+id/farmer_plant_name_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="Plant name"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/farmer_plant_lifespan_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginBottom="10dp"
+                android:text="lifecycle"
+                android:textSize="12sp" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
