--- a/app/src/main/res/layout/activity_farmer_select_farm.xml
+++ b/app/src/main/res/layout/activity_farmer_select_farm.xml
@@ -44,16 +44,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/farmer_select_farm_popup_listView"
-        android:layout_marginTop="180dp"
-        android:layout_marginBottom="180dp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxHeight="500dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginBottom="115dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="180dp">
+
+        <ListView
+            android:layout_weight="1"
+            android:id="@+id/farmer_select_farm_popup_listView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"/>
+
+        <Button
+            android:id="@+id/farmer_select_farm_popup_add_farm"
+            android:text="+ Add Farm / Land"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            />
+    </LinearLayout>
 
 
 
