--- a/app/src/main/res/layout/prompt_add_plot.xml
+++ b/app/src/main/res/layout/prompt_add_plot.xml
@@ -95,6 +95,7 @@
 
 
             <LinearLayout
+                android:paddingVertical="5dp"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -106,6 +107,8 @@
                     android:visibility="gone"
                     android:id="@+id/prompt_plot_img_url"/>
                 <TextView
+                    android:paddingLeft="5dp"
+                    android:textSize="20sp"
                     android:id="@+id/prompt_add_plot_edittext"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
