--- a/app/src/main/res/layout/view_listview_farmer_farm.xml
+++ b/app/src/main/res/layout/view_listview_farmer_farm.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal">
 
-    <CheckBox
-        android:id="@+id/view_select_farm_listview_checkbox"
+
+   >
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:cardCornerRadius="10dp"
+        android:id="@+id/view_select_farm_listview_card"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/view_select_farm_listview_checkbox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
 
     <androidx.cardview.widget.CardView
         android:layout_marginVertical="10dp"
@@ -22,7 +38,8 @@
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
-        android:layout_margin="10dp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="25dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -34,16 +51,17 @@
             android:textSize="22sp"
             android:textStyle="bold"/>
         <TextView
+            android:id="@+id/view_select_farm_listview_text_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Location : 78.97980898908"/>
+        <TextView
             android:id="@+id/view_select_farm_listview_text_status"
             android:textSize="18dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Approved / Not Approved"/>
-        <TextView
-            android:id="@+id/view_select_farm_listview_text_location"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Location : 78.97980898908"/>
+
 
         <TextView
             android:id="@+id/view_select_farm_listview_text_id"
@@ -51,4 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
+        </LinearLayout>
+
+</com.google.android.material.card.MaterialCardView>
 </LinearLayout>
