--- a/app/src/main/res/layout/popup_conference.xml
+++ b/app/src/main/res/layout/popup_conference.xml
@@ -6,6 +6,14 @@
     android:orientation="vertical"
     android:padding="25dp"
     android:gravity="center">
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
@@ -13,13 +21,13 @@
         app:cardCornerRadius="10dp"
         android:layout_marginBottom="25dp">
 
-    <ImageView
-        android:id="@+id/popup_conf_img"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxHeight="400dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/bg_farm"/>
+        <ImageView
+            android:id="@+id/popup_conf_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:src="@drawable/bg_farm" />
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -73,6 +81,9 @@
             android:src="@drawable/baseline_content_copy_24" />
 
     </LinearLayout>
+        </LinearLayout>
+
+    </ScrollView>
 
 
 
