--- a/app/src/main/res/layout/prompt_add_conf.xml
+++ b/app/src/main/res/layout/prompt_add_conf.xml
@@ -1,80 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_root"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:elevation="14dp"
-        android:layout_width="match_parent"
-        app:cardBackgroundColor="?attr/colorPrimary"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_margin="10dp"
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add Conference or Workshop : "
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-    </androidx.cardview.widget.CardView>
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="14dp">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_gravity="center"
-            android:src="@drawable/baseline_add_24"
-            android:layout_marginBottom="14dp"
-            android:id="@+id/prompt_add_conf_image"
-            android:layout_width="match_parent"
-            android:maxHeight="400dp"
-            android:layout_height="wrap_content"/>
-
-        <EditText
-            android:layout_marginBottom="14dp"
-            android:id="@+id/prompt_add_conf_title"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:hint="Enter Title Here">
-            <requestFocus />
+            android:elevation="14dp"
+            app:cardBackgroundColor="?attr/colorPrimary">
 
-        </EditText>
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Add Conference or Workshop : "
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </androidx.cardview.widget.CardView>
 
-
-        <EditText
-            android:layout_marginBottom="14dp"
-            android:id="@+id/prompt_add_conf_disc"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Host Name"
-            android:gravity="start|top"
-            android:inputType="textMultiLine" />
+            android:orientation="vertical"
+            android:paddingVertical="14dp"
+            android:paddingHorizontal="25dp">
 
-        <DatePicker
-            android:layout_marginBottom="14dp"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"/>
+            <ImageView
+                android:id="@+id/prompt_add_conf_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="14dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:src="@drawable/baseline_add_24" />
 
-        <EditText
-            android:layout_marginBottom="14dp"
-            android:id="@+id/prompt_add_conf_venue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Enter Venue"
-            android:gravity="start|top"
-            android:inputType="textMultiLine" />
+            <EditText
+                android:id="@+id/prompt_add_conf_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="14dp"
+                android:hint="Enter Title Here"
+                android:imeOptions="actionNext">
+
+                <requestFocus />
+
+            </EditText>
 
 
+            <EditText
+                android:id="@+id/prompt_add_conf_host_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="14dp"
+                android:ems="10"
+                android:gravity="start|top"
+                android:hint="Host Name"
+                android:inputType="textMultiLine" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="14dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/prompt_add_conf_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="25dp"
+                    android:text="Select date"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/prompt_add_conf_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:text="Select Time"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/prompt_add_conf_venue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="14dp"
+                android:ems="10"
+                android:gravity="start|top"
+                android:hint="Enter Venue"
+                android:inputType="textMultiLine" />
+
+
+        </LinearLayout>
     </LinearLayout>
 
-
-</LinearLayout>
+</ScrollView>
