--- a/app/src/main/res/layout/prompt_add_news.xml
+++ b/app/src/main/res/layout/prompt_add_news.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_root"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:elevation="14dp"
@@ -25,16 +28,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="14dp">
+        android:paddingVertical="14dp"
+        android:paddingHorizontal="25dp">
 
         <ImageView
             android:layout_gravity="center"
-
             android:src="@drawable/baseline_add_24"
             android:layout_marginBottom="14dp"
             android:id="@+id/prompt_add_news_image"
             android:layout_width="match_parent"
-            android:maxHeight="400dp"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
             android:layout_height="wrap_content"/>
 
         <EditText
@@ -61,6 +65,5 @@
 
 
     </LinearLayout>
-
-
 </LinearLayout>
+</ScrollView>
