--- a/app/src/main/res/layout/activity_admin_notification.xml
+++ b/app/src/main/res/layout/activity_admin_notification.xml
@@ -5,6 +5,46 @@
     android:layout_height="match_parent">
 
 
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linearLayoutCompat"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:background="@color/md_theme_light_primary"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:paddingLeft="30dp"
+            android:paddingTop="15dp"
+            android:text="Notification"
+            android:textColor="@color/white"
+            android:textSize="24dp"
+            android:textStyle="bold" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/admin_notification_rv"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+
+
+
+
     <LinearLayout
         android:id="@+id/tabs_layout_nav"
         android:layout_width="match_parent"
@@ -66,89 +106,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/sendnotificationcard"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:paddingHorizontal="5dp"
-        android:weightSum="3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">
 
-
-
-
-            <EditText
-                android:paddingLeft="35dp"
-                android:layout_marginHorizontal="5dp"
-                app:cardCornerRadius="30dp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:hint="Message"/>
-
-
-
-            <ImageButton
-                android:layout_marginHorizontal="5dp"
-                android:layout_width="56dp"
-                app:cardCornerRadius="60dp"
-                android:layout_height="56dp"
-                android:layout_weight="1"
-                android:background="@android:drawable/ic_menu_send"
-
-                 />
-
-
-
-    </LinearLayout>
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/linearLayoutCompat"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:background="@color/md_theme_light_primary"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="30dp"
-            android:paddingTop="15dp"
-            android:text="Notification"
-            android:textColor="@color/white"
-            android:textSize="24dp"
-            android:textStyle="bold" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/admin_notification_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="180dp"
-        android:layout_marginBottom="43dp"
-        app:layout_constraintBottom_toTopOf="@+id/tabs_layout_nav"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notificationtabLayout" />
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/notificationtabLayout"
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sendnotificationcard">
-
-    </com.google.android.material.tabs.TabLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
