--- a/app/src/main/res/layout/activity_admin_request.xml
+++ b/app/src/main/res/layout/activity_admin_request.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,28 +11,42 @@
         android:layout_height="48dp"
         android:background="?attr/colorPrimary"
         android:orientation="horizontal"
+        android:paddingHorizontal="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/admin_dash_news_search"
+        <TextView
+            android:layout_weight="1"
+            android:layout_marginVertical="5dp"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Requests"
+            android:textSize="24sp"/>
+
+        <androidx.appcompat.widget.SearchView
+            android:layout_weight="0.02"
+            android:id="@+id/admin_dash_news_search"
+            android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_margin="4dp"
-            app:iconifiedByDefault="false">
+            android:layout_margin="4dp">
 
         </androidx.appcompat.widget.SearchView>
 
     </LinearLayout>
+
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/admin_dash_news_list"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="60dp"
+        android:id="@+id/admin_request_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="48dp" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/admin_dash_news_floatinf_add"
+        android:id="@+id/admin_requests_floatinf_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
